# fullstack-rust-auth-app

auth-backend/: Cargo.toml
auth-backend/src/: main.rs
auth-frontend/: package-lock.json  package.json
