[package]
name = "auth-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = "0.4"
dotenv = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",

] }
jsonwebtoken = "8.2"
anyhow = "1.0.99"
